# basechar

./: CMakeLists.txt  README.md
cmake/: cae_cpm_package.cmake
encode/: base_char.h  dict.h  main.cpp  sequence.h  utf8_char.h
